--- a/src/pages/styles/homepage.css
+++ b/src/pages/styles/homepage.css
@@ -52,12 +52,17 @@
 		.homepage-first-area-left-side {
 			align-items: center;
 			margin-bottom: 2rem;
+			text-align: center;
+		}
+	
+		.homepage-name {
+			text-align: center !important;
 		}
 	
 		.homepage-title,
 		.homepage-subtitle {
 			width: 100% !important;
-			text-align: center;
+			text-align: center !important;
 		}
 	
 		.homepage-image-container {
@@ -81,6 +86,10 @@
 		.homepage-social-icon {
 			font-size: 28px; /* Slightly larger for mobile */
 			padding: 0 15px;
+		}
+		
+		.homepage-cta-section {
+			justify-content: center;
 		}
 }
 
